--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Reuniclus - Winamp-Style Player</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         /* MAIN PLAYER STYLES */
         body {
